--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "homepage": "https://Polyhalov.github.io/reactpizza/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "qs": "^6.11.2",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.1.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.70.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
